// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProForm 📦 ProForm support sync form url 1`] = `
<form
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-affix-wrapper"
          >
            <input
              class="ant-input"
              id="navTheme"
              placeholder="请输入"
              type="text"
              value="realDark"
            />
            <span
              class="ant-input-suffix"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle ant-input-clear-icon"
                role="button"
                tabindex="-1"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`ProForm 📦 submit props actionsRender=()=>[] 1`] = `
<form
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
</form>
`;

exports[`ProForm 📦 submit props actionsRender=()=>false 1`] = `
<form
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
</form>
`;

exports[`ProForm 📦 submit props actionsRender=false 1`] = `
<form
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
</form>
`;

exports[`ProForm 📦 submit props actionsRender=false 2`] = `
<form
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
</form>
`;

exports[`ProForm 📦 submit props render=()=>[] 1`] = `
<form
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提交并发布
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`ProForm 📦 submitter props support resetButtonProps 1`] = `
<form
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn test_button"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`ProForm 📦 submitter props support submitButtonProps 1`] = `
<form
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary test_button"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </div>
</form>
`;
